# playground

./: .gitignore  README.md
c/: array_index.c  hello.c
iphone_sensor/: Cargo.toml
iphone_sensor/src/: hourglass-arc.rs  main-arc.rs  main.rs
lang_playground/C/: hello  hello.c
lang_playground/cpp/: hello  hello.cpp
lang_playground/csharp/Hello/: Program.cs
lang_playground/go/: main.go
lang_playground/javascript/: index.html  main.js
lang_playground/python/hello/: main.py
lang_playground/ruby/: main.rb
lang_playground/typescript/: main.js  main.ts
lean/natural-number-game/: README.md  lake-manifest.json  lakefile.toml
lean/natural-number-game/NaturalNumberGame/: Basic.lean
mcp/: README.md  main.py  pyproject.toml  server.py
metal/: .clang-format  .clangd  .gitignore  justfile  memo.md
metal/claude-memo/: 2026-07-08_editor-setup.md  2026-07-09_clang-format-autoformat.md  2026-07-09_metal-fundamentals.md
metal/claude-sample/: README.claude.md
metal/claude-sample/01_device_info/: main.cpp
metal/claude-sample/02_compute_add/: add.metal  main.cpp
metal/claude-sample/03_offscreen_triangle/: main.cpp
metal/claude-sample/04_window_triangle/: Renderer.cpp  Renderer.hpp  main.mm  triangle.metal
movie_to_wav/: Cargo.toml  README.md
movie_to_wav/src/: main.rs
mp4_compressor/: Cargo.toml  README.md
mp4_compressor/src/: encode.rs  main.rs  probe.rs  search.rs  vmaf.rs
raspypico/: memo.md
raspypico/hello-led/: CMakeLists.txt  main.c
raspypico/hello-temp/: CMakeLists.txt  main.c
raspypico/hello-usb/: CMakeLists.txt  build.sh  main.c
(+1 files in other folders)
